[gd_scene load_steps=3 format=3 uid="uid://bfehsk633s51e"]

[ext_resource type="Script" path="res://scripts/MainUI/driver_list.gd" id="1_driver_list_script"]
[ext_resource type="PackedScene" uid="uid://c6243b85k6e7" path="res://scenes/components/InformationBar.tscn" id="2_information_bar"]

[node name="DriverList" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.913725, 0.784314, 0.564706, 1)
script = ExtResource("1_driver_list_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500
alignment = 1

[node name="InformationBar" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_information_bar")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Kembali"

[node name="LabelTitle" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
theme_override_colors/font_shadow_color = Color(0.403922, 0.301961, 0.145098, 1)
text = "Supir Kamu"
horizontal_alignment = 1

[node name="LabelNumberDrivers" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
text = "Jumlah supir:"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="AddDrivers" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Tambah Supir"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 30

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DriverListContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DriverItem" type="HBoxContainer" parent="MarginContainer/ScrollContainer/DriverListContainer"]
layout_mode = 2

[node name="DriverName" type="Label" parent="MarginContainer/ScrollContainer/DriverListContainer/DriverItem"]
custom_minimum_size = Vector2(500, 128)
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
text = "Pak Sumanto"

[node name="DriverStats" type="Label" parent="MarginContainer/ScrollContainer/DriverListContainer/DriverItem"]
custom_minimum_size = Vector2(500, 128)
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
text = "Skill: 1.0 | Maintenance: 1.0 | Fee: Rp 5K"

[node name="AssignButton" type="Button" parent="MarginContainer/ScrollContainer/DriverListContainer/DriverItem"]
layout_mode = 2
text = "Pilih"

[node name="FireButton" type="Button" parent="MarginContainer/ScrollContainer/DriverListContainer/DriverItem"]
layout_mode = 2
text = "Pecat"
